--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@
   box-sizing: border-box;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 .nav-container {
   display: flex;
   justify-content: space-between;
@@ -90,6 +93,7 @@
   font-size: 1.5rem;
   color: white;
   border: 2px solid var(--secondary);
+  text-decoration: none;
 }
 
 .primary-btn:hover {
@@ -108,6 +112,7 @@
   color: white;
   padding: 0.2em 0.7em;
   font-size: 1.5rem;
+  text-decoration: none;
 }
 
 .outline-btn:hover {
